# NotePassing

./: .gitignore  log  readme.md
.cursor/rules/: android-dev-conventions.mdc  current-state.mdc  project-overview.mdc  workflow.mdc
android-app/: gradle.properties  settings.gradle.kts
android-app/app/: build.gradle.kts
android-app/gradle/: libs.versions.toml
backend/: .env.example  .gitignore  DEPLOY.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  QUICKSTART.md  README.md  alembic.ini  docker-compose.yml  log  pg_view.sh  pyproject.toml  start.sh  stop_and_clear.sh  test.db  view_db.py  view_pg.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  database.py  dependencies.py  exceptions.py  main.py
backend/app/models/: __init__.py  block.py  device.py  friendship.py  message.py  presence.py  session.py  temp_id.py  ws_connection.py
backend/app/routers/: __init__.py  block.py  device.py  friendship.py  message.py  presence.py  temp_id.py  websocket.py
backend/app/schemas/: __init__.py  block.py  common.py  device.py  friendship.py  message.py  presence.py  temp_id.py  websocket.py
backend/app/services/: __init__.py  device_service.py  message_service.py  messaging_service.py  presence_service.py  relation_service.py  temp_id_service.py  websocket_manager.py
backend/app/utils/: __init__.py  distance.py  error_codes.py  exceptions.py  response.py  rssi_converter.py  temp_id_generator.py  uuid_utils.py  validators.py
backend/scripts/: init_db.py  setup.sh
backend/tests/: README.md  conftest.py  pytest.ini  test_device.py  test_integration.py  test_message.py  test_message_pagination.py  test_presence.py  test_relation.py  test_temp_id.py  test_websocket.py
backend/tests/e2e/: README.md  __init__.py  e2e_test.py  test_block_interaction.py  test_boost_reunion.py  test_first_meeting.py  test_temp_session_expire.py
backend/tests/integration/: test_device_api.py  test_friendship_api.py  test_messaging_api.py  test_presence_api.py  test_websocket.py
backend/tests/unit/: test_device_service.py  test_messaging_service.py  test_presence_service.py  test_relation_service.py  test_temp_id_service.py  test_websocket_manager.py
designs/: MVP.md  Questions.md  SOP.md
documents/: android_dev_plan.md  git工作规则.md  unified_api_contract.md  开发资料.md
documents/first_disign/: Server_ALL_API.md  local 应用逻辑.md  (+4 more)
network_site/: DEPLOY_README_CN.md  README.md  app.py  requirements.txt  start.sh
src/: readme.md
(+93 files in other folders)
